src/test/ui/feature-gate/issue-43106-gating-of-deprecated.stderr
error: compilation successful
  --> $DIR/issue-43106-gating-of-deprecated.rs:29:1
   |
29 | / fn main() { //~ ERROR compilation successful
30 | |     println!("Hello World");
31 | | }
   | |_^

